--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
+    "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -14,7 +15,6 @@
     "dotenv": "^10.0.0",
     "env-cmd": "^10.1.0",
     "graphql": "^15.5.1",
-    "primary_care_admin_binder": "0.0.68",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
