--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 
-REACT_APP_DATABASENAME=openrefine
+REACT_APP_DATABASENAME=crayond_kgs
 REACT_APP_KEY_CLOCK_API=https://apinifi.dev.ainqaplatform.in
 REACT_APP_ARANGO_API=https://arangodbservice.dev.ainqaplatform.in
 
@@ -13,3 +13,8 @@ REACT_APP_CLIENT_NAME=user_client
 REACT_APP_CLIENT_ID=b65e70cd-ade7-4005-ab8f-6a52022c8086
 REACT_APP_METADATAID=04ecb73d-f048-44ce-8563-c9be015812dd
 REACT_APP_ORGANIZATION = Organization
+
+//QDM admin console DB Name 
+
+REACT_APP_QDM_DATABASENAME=QDM_Platform
+ REACT_APP_EntityDesignerToolId="88fd87fa-6163-4a05-ba19-5dee347e0f2d"
