role configuration added

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 
-REACT_APP_DATABASENAME=crayond_kgs
+REACT_APP_DATABASE=ATP_Platform_DEV
 REACT_APP_KEY_CLOCK_API=https://apinifi.dev.ainqaplatform.in
 REACT_APP_ARANGO_API=https://arangodbservice.dev.ainqaplatform.in
-
+REACT_APP_ARANGO_API//=http://164.52.210.54:9097
 //organisation realmname
 REACT_APP_REALM=organization
 //organisation clientname
@@ -16,5 +16,5 @@ REACT_APP_ORGANIZATION = Organization
 
 //QDM admin console DB Name 
 
-REACT_APP_QDM_DATABASENAME=QDM_Platform
+REACT_APP_QDM_DATABASENAME=ATP_Platform_DEV
  REACT_APP_EntityDesignerToolId="88fd87fa-6163-4a05-ba19-5dee347e0f2d"
