changed repo api

--- a/.env
+++ b/.env
@@ -18,3 +18,9 @@ REACT_APP_ORGANIZATION = Organization
 
 REACT_APP_QDM_DATABASENAME=ATP_Platform_DEV
  REACT_APP_EntityDesignerToolId="88fd87fa-6163-4a05-ba19-5dee347e0f2d"
+
+REACT_APP_BASE_URL_PROTOCAL=https
+REACT_APP_TOKEN_URL = https://idmservices.dev.ainqaplatform.in
+
+REACT_APP_IDM_DB="IDMService"
+REACT_APP_IDM_URL=idmservices.dev.ainqaplatform.in
