--- a/.env
+++ b/.env
@@ -11,16 +11,30 @@ REACT_APP_CLIENT_NAME=user_client
 
 //secret key of organisation
 REACT_APP_CLIENT_ID=b65e70cd-ade7-4005-ab8f-6a52022c8086
-REACT_APP_METADATAID=04ecb73d-f048-44ce-8563-c9be015812dd
+# REACT_APP_METADATAID=04ecb73d-f048-44ce-8563-c9be015812dd
 REACT_APP_ORGANIZATION = Organization
 
 //QDM admin console DB Name 
 
 REACT_APP_QDM_DATABASENAME=ATP_Platform_DEV
- REACT_APP_EntityDesignerToolId="88fd87fa-6163-4a05-ba19-5dee347e0f2d"
+REACT_APP_EntityDesignerToolId="88fd87fa-6163-4a05-ba19-5dee347e0f2d"
 
+//IDM
 REACT_APP_BASE_URL_PROTOCAL=https
-REACT_APP_TOKEN_URL = https://idmservices.dev.ainqaplatform.in
-
 REACT_APP_IDM_DB="IDMService"
 REACT_APP_IDM_URL=idmservices.dev.ainqaplatform.in
+# REACT_APP_METADATA_DB_NAME="ATP_Platform_DEV"
+REACT_APP_METADATA_DB_NAME="ATP_Metadata_Dev"
+# REACT_APP_DB = "ipmo"
+# REACT_APP_IDM_METADATA_ID=ffdfb801-3383-4749-b368-d5f8d2e60083
+# REACT_APP_METADATAID=8fd7c4c8-706a-4edc-ab27-534cb7e9ad8a
+REACT_APP_IDM_REPO = https://idmservices.dev.ainqaplatform.in/upsert_repo
+# REACT_APP_SUPERADMIN_TENENTID=1e4c8e40-a7f8-46de-9ac7-cedde81aa046
+# REACT_APP_Enterprice_Id = "CodingMaster/10008"
+# REACT_APP_FACILITY_TYPE="CodingMaster/10010"
+# REACT_APP_ORGANIZATION_Id = "CodingMaster/10009"
+REACT_APP_BASE_URL_HOST=arangodbservice.dev.ainqaplatform.in
+REACT_APP_BASE_URL_PORT=443
+REACT_APP_ARANGO_URL_READ=https://arangodbservice.dev.ainqaplatform.in/api/read_documents
+# REACT_APP_CLIENT_REPO_ID=clients/476055589
+# REACT_APP_PROJECT_REPO_ID=projects/476434031
