--- a/package.json
+++ b/package.json
@@ -11,16 +11,25 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "atp-multilingual": "^1.0.12",
     "axios": "^0.21.1",
+    "classnames": "^2.3.1",
+    "date-fns": "^2.29.1",
     "dotenv": "^10.0.0",
     "env-cmd": "^10.1.0",
+    "formik": "^2.2.9",
     "graphql": "^15.5.1",
+    "idm_binder": "0.0.9",
+    "md5": "^2.3.0",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^9.0.0",
     "subscriptions-transport-ws": "^0.9.19",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
@@ -33,7 +42,8 @@
     "workbox-range-requests": "^5.1.4",
     "workbox-routing": "^5.1.4",
     "workbox-strategies": "^5.1.4",
-    "workbox-streams": "^5.1.4"
+    "workbox-streams": "^5.1.4",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
